# promptkit

./: .env.example  .gitignore  .rules  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  prek.toml  pyproject.toml
.claude/: settings.local.json
.claude/commands/: gh-issue
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
dev-docs/: ARCHITECTURE.md
docs/: faq.md
src/promptkit/: __init__.py  cli.py  config.py  diff.py  errors.py  lint.py  manager.py  metadata.py  release.py  render.py  store.py
tests/: test_cli.py  test_manager.py  test_release.py  test_store.py
